test/parser/interpolated_strings/unterminated_interpolated_string.myte
module test

val x: string = `Hello world

fun main() {}